# opensubtitles-legacy-api

./: .env.example  .gitignore  Dockerfile  HDO-iOS.md  README.md  SUBDL_INTEGRATION.md  compose.yml  pyproject.toml  serve-config.json  start.sh  supervisord.conf
ola/: database_manager.py  lang.py  logger.py  main.py
