[project]
name = "opensubtitles-legacy-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "polars>=1.32.3",
    "supervisor>=4.2.5",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["ola/"]

[tool.hatch.build.targets.wheel]
include = ["ola/"]
packages = ["ola"]

